# INE410121

./: .gitignore  README.md
assignment/: book_count.csv  pipeline.ipynb  pyproject.toml
assignment/notebooks/: Model.ipynb
experiments/e_1/: e1.ipynb  e1_previous_analysis.ipynb  pyproject.toml
